jenkins.namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: jenkins
---
kind: Namespace
apiVersion: v1
metadata:
  name: dev
---
kind: Namespace
apiVersion: v1
metadata:
  name: test
---
kind: Namespace
apiVersion: v1
metadata:
  name: prod
